--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ wtf (where is my food)
 </td>
 </tr>
 <tr>
-  <td>javadcipt</td>
+  <td>javascript</td>
   <td>
     ⭐⭐⭐⭐⭐
   </td>
@@ -109,7 +109,7 @@ wtf (where is my food)
 </td>
 </tr>
 <tr>
-  <td>grapjic designing</td>
+  <td>graphic designing</td>
   <td>
     ⭐⭐⭐⭐⭐
   </td>
