--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       7896523455
     </p>
     <p>
-      erenjaeger@email.com
+      ayushsingh14942@gmail.com
     </p>
     <form class="" action="mailto:ayushsingh14942@gmail.com" method="post" enctype="text/plain">
       <lable>
