--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
       MY CONTACT DETAILS:
     </h1>
     <p>
-      my fictinal address
+      my fictinal phone number but real email
     </p>
     <p>
       7896523455
